--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ LabelledArrays = "2ee39098-c373-598a-b85f-a56591580800"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 NodeJS = "2bd173c7-0d6d-553b-b6af-13a54713934c"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
