--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
 CSV = "0.8.5"
+DataFrames = "1"
 DiffEqBase = "6.78"
 LabelledArrays = "1.6.1"
 Sundials = "4.7.0"
