--- a/Project.toml
+++ b/Project.toml
@@ -24,7 +24,7 @@ Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
-CSV = "0.8.5"
+CSV = "0.8.5, 0.9"
 DiffEqBase = "6.78"
 LabelledArrays = "1.6.1"
 Sundials = "4.7.0"
