--- a/Project.toml
+++ b/Project.toml
@@ -32,6 +32,7 @@ DiffEqBase = "6.78"
 Distributions = "0.25"
 LabelledArrays = "1.6.1"
 NLopt = "0.6"
+NaNMath = "0.3"
 NodeJS = "1"
 OrdinaryDiffEq = "6"
 ProgressMeter = "1"
