--- a/Project.toml
+++ b/Project.toml
@@ -14,8 +14,8 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LabelledArrays = "2ee39098-c373-598a-b85f-a56591580800"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
-NodeJS = "2bd173c7-0d6d-553b-b6af-13a54713934c"
 NaNMath = "77ba4419-2d1f-58cd-9bb1-8ffee604a2e3"
+NodeJS = "2bd173c7-0d6d-553b-b6af-13a54713934c"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
@@ -25,7 +25,7 @@ Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
-CSV = "0.8.5"
+CSV = "0.8.5, 0.10"
 DataFrames = "1"
 DataStructures = "0.18"
 DiffEqBase = "6.82"
