--- a/Project.toml
+++ b/Project.toml
@@ -14,8 +14,8 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LabelledArrays = "2ee39098-c373-598a-b85f-a56591580800"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
-NodeJS = "2bd173c7-0d6d-553b-b6af-13a54713934c"
 NaNMath = "77ba4419-2d1f-58cd-9bb1-8ffee604a2e3"
+NodeJS = "2bd173c7-0d6d-553b-b6af-13a54713934c"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
@@ -32,7 +32,7 @@ DiffEqBase = "6.82"
 Distributions = "0.25"
 LabelledArrays = "1.6.1"
 NLopt = "0.6"
-NaNMath = "0.3"
+NaNMath = "0.3, 1"
 NodeJS = "1"
 OrdinaryDiffEq = "6"
 ProgressMeter = "1"
