CompatHelper: bump compat for NLopt to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ DataStructures = "0.18"
 DiffEqBase = "6.82"
 Distributions = "0.25"
 LabelledArrays = "1.6.1"
-NLopt = "0.6"
+NLopt = "0.6, 1"
 NaNMath = "1"
 NodeJS = "1"
 OrdinaryDiffEq = "6"
