--- a/Project.toml
+++ b/Project.toml
@@ -34,7 +34,7 @@ LabelledArrays = "1.6.1"
 NLopt = "0.6"
 NaNMath = "1"
 NodeJS = "2"
-OrdinaryDiffEq = "6"
+OrdinaryDiffEq = "6.0 - 6.55"
 ProgressMeter = "1"
 RecipesBase = "1"
 RecursiveArrayTools = "2"
