--- a/Project.toml
+++ b/Project.toml
@@ -34,14 +34,14 @@ LabelledArrays = "1.6.1"
 NLopt = "0.6"
 NaNMath = "1"
 NodeJS = "2"
-OrdinaryDiffEq = "6.0 - 6.55"
+OrdinaryDiffEq = "6"
 ProgressMeter = "1"
 RecipesBase = "1"
-RecursiveArrayTools = "2"
+RecursiveArrayTools = "3"
 Reexport = "1"
-Sundials = "4.16 - 4.19.3"
+Sundials = "4.24"
 XLSX = "0.7, 0.8"
-julia = "1.6 - 1.9"
+julia = "1.7"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
