RecursiveArrayTools vers to support julia 1.7

--- a/Project.toml
+++ b/Project.toml
@@ -37,7 +37,7 @@ NodeJS = "2"
 OrdinaryDiffEq = "6"
 ProgressMeter = "1"
 RecipesBase = "1"
-RecursiveArrayTools = "3"
+RecursiveArrayTools = "2.36, 3"
 Reexport = "1"
 Sundials = "4.24"
 XLSX = "0.7, 0.8"
