--- a/Project.toml
+++ b/Project.toml
@@ -14,8 +14,8 @@ LabelledArrays = "2ee39098-c373-598a-b85f-a56591580800"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 NaNMath = "77ba4419-2d1f-58cd-9bb1-8ffee604a2e3"
-NodeJS = "2bd173c7-0d6d-553b-b6af-13a54713934c"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
@@ -31,7 +31,6 @@ Distributions = "0.25"
 LabelledArrays = "1.6.1"
 NLopt = "0.6"
 NaNMath = "1"
-NodeJS = "2"
 OrdinaryDiffEq = "6"
 ProgressMeter = "1"
 RecipesBase = "1"
