workflow_dispatch added to qsp-platforms-builder

--- a/.github/workflows/docker-qsp-platforms.yml
+++ b/.github/workflows/docker-qsp-platforms.yml
@@ -2,7 +2,7 @@ name: Docker QSP Platforms Builder
 on:
   push:
     tags: [v*]
-
+  workflow_dispatch:
 jobs:
   DockerIMG:
     runs-on: ubuntu-latest
