--- a/.github/workflows/docker-qsp-platforms.yml
+++ b/.github/workflows/docker-qsp-platforms.yml
@@ -10,12 +10,12 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push qsp-platforms-builder
       uses: docker/build-push-action@v3
       with:
         push: true
         file: ./dockerfiles/qsp-platforms-builder/Dockerfile
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/qsp-platforms-builder:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/qsp-platforms-builder:latest
