--- a/dockerfiles/qsp-platforms-builder/Dockerfile
+++ b/dockerfiles/qsp-platforms-builder/Dockerfile
@@ -21,6 +21,6 @@ RUN Rscript -e 'install.packages(c("lattice", "mrgsolve", "tidyverse"));'
 
 # install and precompile HetaSimulator
 RUN mkdir /opt/julia && julia -e 'using Pkg; Pkg.add(["HetaSimulator", "PackageCompiler", "Plots"]);'
-RUN mkdir /opt/julia/sysimages && julia -e 'using HetaSimulator, Plots, PackageCompiler; create_sysimage(["HetaSimulator", "Plots"], sysimage_path="/opt/julia/sysimages/hetasimulator.so", cpu_target="generic")'
+RUN mkdir /opt/julia/sysimages && julia -e 'using HetaSimulator, Plots, PackageCompiler; create_sysimage(["HetaSimulator", "Plots"], sysimage_path="/opt/julia/sysimages/hetasimulator.so", include_transitive_dependencies=false, cpu_target="generic")'
 
 CMD ["julia"]
