--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ Distributions = "0.25"
 LabelledArrays = "1.6.1"
 NLopt = "0.6"
 NaNMath = "1"
-OrdinaryDiffEq = "6"
+OrdinaryDiffEq = "6 - 6.85.0"
 ProgressMeter = "1"
 RecipesBase = "1"
 Reexport = "1"
