docker build after tagbot

--- a/.github/workflows/docker-qsp-platforms.yml
+++ b/.github/workflows/docker-qsp-platforms.yml
@@ -1,7 +1,9 @@
 name: Docker QSP Platforms Builder
 on:
-  push:
-    tags: [v*]
+  workflow_run:
+    workflows: ["TagBot"]
+    types: 
+      - completed
   workflow_dispatch:
 jobs:
   DockerIMG:
