--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ LabelledArrays = "2ee39098-c373-598a-b85f-a56591580800"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 NaNMath = "77ba4419-2d1f-58cd-9bb1-8ffee604a2e3"
+NonlinearSolve = "8913a72c-1f9b-4ce2-8d82-65094dcecaec"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
@@ -31,7 +32,8 @@ Distributions = "0.25"
 LabelledArrays = "1.6.1"
 NLopt = "0.6"
 NaNMath = "1"
-OrdinaryDiffEq = "6 - 6.80.1"
+NonlinearSolve = "3.7.3 - 3.12.4"
+OrdinaryDiffEq = "6"
 ProgressMeter = "1"
 RecipesBase = "1"
 Reexport = "1"
