--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
       matrix:
         version:
           - '1.9' # Replace this with the minimum Julia version that your package supports. E.g. if your package requires Julia 1.5 or higher, change this to '1.5'.
+          - 'lts' # Long time support version
           - '1' # automatically expands to the latest stable 1.x release of Julia        
-          #  - 'nightly'
         os:
           - ubuntu-latest
           - macos-latest
