--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LabelledArrays = "2ee39098-c373-598a-b85f-a56591580800"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
+NLopt_jll = "079eb43e-fd8e-5478-9966-2cf3e3edb778"
 NaNMath = "77ba4419-2d1f-58cd-9bb1-8ffee604a2e3"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
@@ -31,7 +32,8 @@ DataFrames = "1"
 DataStructures = "0.18"
 Distributions = "0.25"
 LabelledArrays = "1.6.1"
-NLopt = "0.6"
+NLopt = "1.0.3"
+NLopt_jll = "=2.8.0"
 NaNMath = "1"
 OrdinaryDiffEq = "6"
 ProgressMeter = "1"
