OrdinaryDiffEq back to v 6

--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ Distributions = "0.25"
 LabelledArrays = "1.6.1"
 NLopt = "0.6"
 NaNMath = "1"
-OrdinaryDiffEq = "6 - 6.55"
+OrdinaryDiffEq = "6"
 ProgressMeter = "1"
 RecipesBase = "1"
 Reexport = "1"
