--- a/Project.toml
+++ b/Project.toml
@@ -33,12 +33,12 @@ Distributions = "0.25"
 LabelledArrays = "1.6.1"
 NLopt = "0.6"
 NaNMath = "1"
-OrdinaryDiffEq = "6"
+OrdinaryDiffEq = "6 - 6.55"
 ProgressMeter = "1"
 RecipesBase = "1"
 Reexport = "1"
-SciMLBase = "2.15"
-Sundials = "4.24"
+SciMLBase = "1.98.1"
+Sundials = "4.19"
 XLSX = "0.7, 0.8"
 julia = "1.9"
 
