--- a/Project.toml
+++ b/Project.toml
@@ -35,7 +35,7 @@ LabelledArrays = "1.6.1"
 NLopt = "1.0.3"
 NLopt_jll = "=2.8.0"
 NaNMath = "1"
-OrdinaryDiffEq = "6"
+OrdinaryDiffEq = "6 - 6.55"
 ProgressMeter = "1"
 RecipesBase = "1"
 Reexport = "1"
