Odiffeq fixed to v6.59.3

--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
 julia = "1.9"
+OrdinaryDiffEq = "=6.59.3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
