--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,20 +9,30 @@ on:
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
+
+    continue-on-error: ${{ matrix.allow_failure || false }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        version:
-          - '1.9'
-          - 'lts'
-          - '1' # the latest stable 1.x        
-        os:
-          - ubuntu-latest
-          - macos-latest
-          - windows-latest
-        arch:
-          - x64
+        include:
+          - {version: '1.9',  os: windows-latest, arch: x64}
+          - {version: '1.9',  os: ubuntu-latest,  arch: x64}
+          - {version: '1.9',  os: macos-latest,   arch: aarch64}
+          - {version: '1.10', os: windows-latest, arch: x64}
+          - {version: '1.10', os: ubuntu-latest,  arch: x64}
+          - {version: '1.10', os: macos-latest,   arch: aarch64}
+          - {version: '1', os: windows-latest, arch: x64}
+          - {version: '1', os: ubuntu-latest,  arch: x64}
+          - {version: '1', os: macos-latest,   arch: aarch64}
+
+          - {version: '1.9', os: ubuntu-22.04-arm, arch: aarch64}
+          - {version: '1.10', os: ubuntu-22.04-arm, arch: aarch64}
+          - {version: '1', os: ubuntu-22.04-arm, arch: aarch64}
+
+          - {version: '1.9', os: macos-13, arch: x64}
+          - {version: '1.10', os: macos-13, arch: x64}
+          - {version: '1.11', os: macos-13, arch: x64}
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
