--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,20 +19,15 @@ jobs:
           - {version: '1.9',  os: windows-latest, arch: x64}
           - {version: '1.9',  os: ubuntu-latest,  arch: x64}
           - {version: '1.9',  os: macos-latest,   arch: aarch64}
-          - {version: '1.10', os: windows-latest, arch: x64}
-          - {version: '1.10', os: ubuntu-latest,  arch: x64}
-          - {version: '1.10', os: macos-latest,   arch: aarch64}
+          - {version: 'lts', os: windows-latest, arch: x64}
+          - {version: 'lts', os: ubuntu-latest,  arch: x64}
+          - {version: 'lts', os: macos-latest,   arch: aarch64}
           - {version: '1', os: windows-latest, arch: x64}
           - {version: '1', os: ubuntu-latest,  arch: x64}
           - {version: '1', os: macos-latest,   arch: aarch64}
-
-          - {version: '1.9', os: ubuntu-22.04-arm, arch: aarch64}
-          - {version: '1.10', os: ubuntu-22.04-arm, arch: aarch64}
-          - {version: '1', os: ubuntu-22.04-arm, arch: aarch64}
-
-          - {version: '1.9', os: macos-13, arch: x64}
-          - {version: '1.10', os: macos-13, arch: x64}
-          - {version: '1.11', os: macos-13, arch: x64}
+          # exotic architectures
+          - {version: 'lts', os: ubuntu-22.04-arm, arch: aarch64, allow_failure: true}
+          - {version: 'lts', os: macos-13, arch: x64}
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
