--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,15 @@ jobs:
         include:
           - {version: '1.9',  os: windows-latest, arch: x64}
           - {version: '1.9',  os: ubuntu-latest,  arch: x64}
+          - {version: '1.9',  os: ubuntu-latest,  arch: aarch64}
           - {version: '1.9',  os: macos-latest,   arch: aarch64}
           - {version: 'lts', os: windows-latest, arch: x64}
           - {version: 'lts', os: ubuntu-latest,  arch: x64}
+          - {version: 'lts', os: ubuntu-latest,  arch: aarch64}
           - {version: 'lts', os: macos-latest,   arch: aarch64}
           - {version: '1', os: windows-latest, arch: x64}
           - {version: '1', os: ubuntu-latest,  arch: x64}
+          - {version: '1', os: ubuntu-latest,  arch: aarch64}
           - {version: '1', os: macos-latest,   arch: aarch64}
           # exotic architectures
           - {version: 'lts', os: ubuntu-22.04-arm, arch: aarch64, allow_failure: true}
