--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 ArtifactUtils = "0.2.4"
 CSV = "0.10"
 DataFrames = "1"
-DataStructures = "0.18"
+DataStructures = "0.18, 0.19"
 Distributions = "0.25"
 LabelledArrays = "1.6.1"
 NLopt = "1.0.3"
