--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LabelledArrays = "2ee39098-c373-598a-b85f-a56591580800"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
@@ -31,6 +32,7 @@ CSV = "0.10"
 DataFrames = "1"
 DataStructures = "0.18"
 Distributions = "0.25"
+ForwardDiff = "0.10.38, 1.0.1"
 LabelledArrays = "1.6.1"
 NLopt = "1.0.3"
 NLopt_jll = "=2.8.0"
