add OptimizationNLopt ver to support julia 1.9

--- a/Project.toml
+++ b/Project.toml
@@ -34,7 +34,7 @@ Distributions = "0.25"
 ForwardDiff = "0.10.38, 1.0.1"
 LabelledArrays = "1.6.1"
 NaNMath = "1"
-OptimizationNLopt = "0.3.2"
+OptimizationNLopt = "0.2.2, 0.3.2"
 OrdinaryDiffEq = "6"
 ProgressMeter = "1"
 RecipesBase = "1"
